# benihime

./: Cargo.toml  README.md  build.zig  build.zig.zon
.github/workflows/: ci.yml
benihime-core/: Cargo.toml
benihime-core/src/: application.rs  buffer.rs  buffer_manager.rs  chars.rs  editor.rs  editor_state.rs  graphics.rs  input_handler.rs  main.rs  mini_buffer.rs  position.rs  tree.rs  undotree.rs  window.rs
benihime-core/src/command/: command.rs  command_registry.rs  default_commands.rs  mod.rs
benihime-core/src/keymap/: default_keymap.rs  key_chord.rs  keymap.rs  mod.rs
benihime-core/src/movement/: movement.rs  movement_commands.rs
benihime-core/src/project/: mod.rs  project_manager.rs
benihime-core/src/render/: buffer.rs  bufferline.rs  gui_render.rs  minibuffer.rs  statusline.rs
benihime-core/src/theme/: mod.rs  theme.rs  theme_loader.rs
benihime-core/src/ui/: composer.rs  editor_view.rs  job.rs  mod.rs
benihime-core/src/ui/components/: buffer_line.rs  cursor.rs  mini_buffer.rs  mod.rs  status_line.rs
benihime-event/: Cargo.toml
benihime-event/src/: cancel.rs  debounce.rs  hook.rs  lib.rs  redraw.rs  registry.rs  runtime.rs  status.rs
benihime-loader/: Cargo.toml
benihime-loader/src/: layout.rs  lib.rs  path.rs  paths.rs
benihime-loader/src/themes/: bootstrap.rs
benihime-renderer/: Cargo.toml
benihime-renderer/src/: blur.wgsl  color.rs  composer.rs  display_list.rs  error.rs  event.rs  frame_render.rs  graphics.rs  key.rs  layout.rs  lib.rs  powerline.rs  rect.wgsl  renderer.rs  shader.wgsl  svg_icon.rs  text.rs  text_cache.rs
docs/: keybinds.md
runtime/themes/: default.toml
src/: buffer.rs  buffer.zig  buffer_manager.rs  chars.rs  commands.rs  editor.rs  editor.zig  gui_render.rs  input.rs  keymap.rs  keys.zig  main.rs  main.zig  mini_buffer.rs  motion.rs  term.zig  theme.rs  tui_render.rs
src/command/: command.rs  command_registry.rs  default_commands.rs
src/keymap/: default_keymap.rs  key_chord.rs  keymap.rs  mod.rs
src/movement/: mod.rs  movement.rs  selection.rs
src/render/: buffer.rs  bufferline.rs  gui_render.rs  minibuffer.rs  mod.rs  statusline.rs
src/theme/: mod.rs  theme.rs  theme_loader.rs
src/themes/: base_color.rs  color.rs  mod.rs
themes/: default.toml
