[workspace]
resolver = "2"
members = [
  "benihime-core",
  "benihime-event",
  "benihime-loader",
  "benihime-renderer"
]

default-members = [
  "benihime-core"
]

[workspace.dependencies]
anyhow = "1.0.99"
env_logger = "0.10"
thiserror = "2.0.16"
log = "0.4"
bitflags = "2.10.0"
foldhash = "0.2.0"
futures-executor = "0.3.31"
hashbrown = "0.16.1"
once_cell = "1.21.3"
parking_lot = "0.12.5"

tokio = { features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "time",
  "process",
  "macros",
  "fs",
  "parking_lot",
  "sync",
], version = "1.47" }
