[package]
name = "benihime-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bitflags = "2.10.0"
eframe = "0.32.3"
egui = "0.32.3"
env_logger = "0.11.8"
ignore = "0.4.23"
log = "0.4.28"
ropey = "1.6.1"
thiserror = "2.0.16"
toml = "0.9.10"
unicode-general-category = "1.1.0"
benihime-loader = {path = "../benihime-loader"}
