[package]
name = "benihime-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
foldhash.workspace         = true
futures-executor.workspace = true
hashbrown.workspace        = true
log.workspace              = true
once_cell.workspace        = true
parking_lot                = { features = [ "hardware-lock-elision" ], workspace = true }
tokio.workspace            = true
futures-util.workspace     = true
serde.workspace            = true

bitflags = "2.10.0"
env_logger = "0.11.8"
ignore = "0.4.23"
ropey = "1.6.1"
thiserror = "2.0.16"
toml = "0.9.10"
unicode-general-category = "1.1.0"
benihime-loader = {path = "../benihime-loader"}
benihime-renderer = {path = "../benihime-renderer"}
benihime-event = {path = "../benihime-event"}
